--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css/style.css" />
+    <link rel="stylesheet" href="css/style.css/style.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -15,7 +15,7 @@
               <p class="header-nav__text1">about us</p>
               <p class="header-nav__text1">work</p>
               <img
-                src="/img/logo/main-logo.png"
+                src="img/logo/main-logo.png"
                 alt="oops"
                 class="header-nav__logo"
               />
@@ -27,7 +27,7 @@
         <div class="generation-info">
           <div class="conteiner">
             <img
-              src="/img/icon/cog-icon.png"
+              src="img/icon/cog-icon.png"
               alt=""
               class="generation-info__logo"
             />
@@ -49,7 +49,7 @@
             <div class="vintage-oliva__item">
               <div class="vintage-oliva__img">
                 <img
-                  src="/img/logo/bicycle-logo.png"
+                  src="img/logo/bicycle-logo.png"
                   alt=""
                   class="vintage-oliva__img-icon"
                 />
@@ -57,7 +57,7 @@
               <div class="vintage-oliva__img-text">
                 <div class="vintage-oliva__img-text__info">
                   <div class="vintage-oliva__img-text__info__icon">
-                    <img src="/img/icon/frame-icon.png" alt="" class="" />
+                    <img src="img/icon/frame-icon.png" alt="" class="" />
                   </div>
                   <p class="vintage-oliva__img-text__info__title">
                     vintage Oliva
@@ -72,7 +72,7 @@
                 </div>
                 <div class="vintage-oliva__img-text__img">
                   <img
-                    src="/img/seat-red.jpg"
+                    src="img/seat-red.jpg"
                     alt=""
                     class="vintage-oliva__img-text__img1"
                   />
@@ -87,7 +87,7 @@
               <div class="la-boriosa__text-subimg">
                 <div class="la-boriosa__text-subimg__text">
                   <div class="la-boriosa__text-subimg__text__icon">
-                    <img src="/img/icon/mech-icon.png" alt="" />
+                    <img src="img/icon/mech-icon.png" alt="" />
                   </div>
                   <div class="la-boriosa__text-subimg__text__title title">
                     La Boriosa
@@ -106,7 +106,7 @@
                 </div>
                 <div class="la-boriosa__text-subimg__img">
                   <img
-                    src="/img/seat-black.jpg"
+                    src="img/seat-black.jpg"
                     alt=""
                     class="la-boriosa__text-subimg__img"
                   />
@@ -114,7 +114,7 @@
               </div>
               <div class="la-boriosa__img">
                 <img
-                  src="/img/logo/vintage-logo.png"
+                  src="img/logo/vintage-logo.png"
                   alt=""
                   class="la-boriosa__img__icon"
                 />
@@ -127,7 +127,7 @@
             <div class="retro-bike__item">
               <div class="retro-bike__item__logo">
                 <img
-                  src="/img/logo/bicycles-sml-logo.png"
+                  src="img/logo/bicycles-sml-logo.png"
                   alt=""
                   class="retro-bike__item__logo__size"
                 />
@@ -135,7 +135,7 @@
               <div class="retro-bike__item__row">
                 <div class="retro-bike__item__text-subimg">
                   <div class="retro-bike__item__text-subimg__icon">
-                    <img src="/img/icon/front-icon.png" alt="" />
+                    <img src="img/icon/front-icon.png" alt="" />
                   </div>
                   <div class="retro-bike__item__text-subimg__title title">
                     retrò Bike - M. Hulot
@@ -151,7 +151,7 @@
                   </div>
                   <div class="retro-bike__item__text-subimg__img">
                     <img
-                      src="/img/chrome-wheels.jpg"
+                      src="img/chrome-wheels.jpg"
                       alt=""
                       class="retro-bike__item__text-subimg__img"
                     />
@@ -159,7 +159,7 @@
                 </div>
                 <div class="retro-bike__item__img">
                   <img
-                    src="/img/red-bike.jpg"
+                    src="img/red-bike.jpg"
                     alt=""
                     class="retro-bike__item__img1"
                   />
@@ -172,7 +172,7 @@
           <div class="conteiner">
             <div class="scroll__item">
               <div class="scroll__item__icon">
-                <img src="/img/icon/twitter-bird.png" alt="" />
+                <img src="img/icon/twitter-bird.png" alt="" />
               </div>
               <div class="scroll__item__title title">
                 <p>
@@ -197,14 +197,14 @@
                 <div class="img__item__1__row">
                   <div class="img__item__1__row__img1">
                     <img
-                      src="/img/l1.jpg"
+                      src="img/l1.jpg"
                       alt=""
                       class="img__item__1__row__img1"
                     />
                   </div>
                   <div class="img__item__1__row__img2">
                     <img
-                      src="/img/l2.jpg"
+                      src="img/l2.jpg"
                       alt=""
                       class="img__item__1__row__img2"
                     />
@@ -212,7 +212,7 @@
                 </div>
                 <div class="img__item__1__under-img">
                   <img
-                    src="/img/l3.jpg"
+                    src="img/l3.jpg"
                     alt=""
                     class="img__item__1__under-img"
                   />
@@ -220,27 +220,27 @@
               </div>
               <div class="img__item__2">
                 <div class="img__item__2__img1">
-                  <img src="/img/l4.jpg" alt="" class="img__item__2__img11" />
+                  <img src="img/l4.jpg" alt="" class="img__item__2__img11" />
                 </div>
                 <div class="img__item__2__img2">
-                  <img src="/img/l5.jpg" alt="" class="img__item__2__img22" />
+                  <img src="img/l5.jpg" alt="" class="img__item__2__img22" />
                 </div>
               </div>
               <div class="img__item__3">
                 <div class="img__item__3__img1">
-                  <img src="/img/l6.jpg" alt="" class="img__item__3__img1" />
+                  <img src="img/l6.jpg" alt="" class="img__item__3__img1" />
                 </div>
                 <div class="img__item__3__row">
                   <div class="img__item__3__row__img1">
                     <img
-                      src="/img/l7.jpg"
+                      src="img/l7.jpg"
                       alt=""
                       class="img__item__3__row__img1"
                     />
                   </div>
                   <div class="img__item__3__row__img2">
                     <img
-                      src="/img/l8.jpg"
+                      src="img/l8.jpg"
                       alt=""
                       class="img__item__3__row__img2"
                     />
@@ -264,7 +264,7 @@
             <div class="email__items">
               <div class="email__main-logo">
                 <img
-                  src="/img/logo/main-logo.png"
+                  src="img/logo/main-logo.png"
                   alt=""
                   class="email__main-logo__logo"
                 />
