--- a/index.html
+++ b/index.html
@@ -299,17 +299,17 @@
             </div>
             <div class="footer__icon">
               <img
-                src="/img/icon/twitter-icon.png"
+                src="img/icon/twitter-icon.png"
                 alt=""
                 class="footer__icon__1"
               />
               <img
-                src="/img/icon/facebook-icon.png"
+                src="img/icon/facebook-icon.png"
                 alt=""
                 class="footer__icon__2"
               />
               <img
-                src="/img/icon/pintrest-icon.png"
+                src="img/icon/pintrest-icon.png"
                 alt=""
                 class="footer__icon__3"
               />
