--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               <p class="header-nav__text1">work</p>
               <img
                 src="img/logo/main-logo.png"
-                alt="oops"
+                alt="main-logo"
                 class="header-nav__logo"
               />
               <p class="header-nav__text2">shop</p>
@@ -28,7 +28,7 @@
           <div class="conteiner">
             <img
               src="img/icon/cog-icon.png"
-              alt=""
+              alt="icon"
               class="generation-info__logo"
             />
             <p class="generation-info__title">
@@ -50,14 +50,14 @@
               <div class="vintage-oliva__img">
                 <img
                   src="img/logo/bicycle-logo.png"
-                  alt=""
+                  alt="bicycle-logo"
                   class="vintage-oliva__img-icon"
                 />
               </div>
               <div class="vintage-oliva__img-text">
                 <div class="vintage-oliva__img-text__info">
                   <div class="vintage-oliva__img-text__info__icon">
-                    <img src="img/icon/frame-icon.png" alt="" class="" />
+                    <img src="img/icon/frame-icon.png" alt="icon" class="" />
                   </div>
                   <p class="vintage-oliva__img-text__info__title">
                     vintage Oliva
@@ -73,7 +73,7 @@
                 <div class="vintage-oliva__img-text__img">
                   <img
                     src="img/seat-red.jpg"
-                    alt=""
+                    alt="seat-red"
                     class="vintage-oliva__img-text__img1"
                   />
                 </div>
@@ -87,7 +87,7 @@
               <div class="la-boriosa__text-subimg">
                 <div class="la-boriosa__text-subimg__text">
                   <div class="la-boriosa__text-subimg__text__icon">
-                    <img src="img/icon/mech-icon.png" alt="" />
+                    <img src="img/icon/mech-icon.png" alt="mech-icon" />
                   </div>
                   <div class="la-boriosa__text-subimg__text__title title">
                     La Boriosa
@@ -107,7 +107,7 @@
                 <div class="la-boriosa__text-subimg__img">
                   <img
                     src="img/seat-black.jpg"
-                    alt=""
+                    alt="seat-black"
                     class="la-boriosa__text-subimg__img"
                   />
                 </div>
@@ -115,7 +115,7 @@
               <div class="la-boriosa__img">
                 <img
                   src="img/logo/vintage-logo.png"
-                  alt=""
+                  alt="vintage-logo"
                   class="la-boriosa__img__icon"
                 />
               </div>
@@ -128,14 +128,14 @@
               <div class="retro-bike__item__logo">
                 <img
                   src="img/logo/bicycles-sml-logo.png"
-                  alt=""
+                  alt="bicycles-sml-logo"
                   class="retro-bike__item__logo__size"
                 />
               </div>
               <div class="retro-bike__item__row">
                 <div class="retro-bike__item__text-subimg">
                   <div class="retro-bike__item__text-subimg__icon">
-                    <img src="img/icon/front-icon.png" alt="" />
+                    <img src="img/icon/front-icon.png" alt="front-icon" />
                   </div>
                   <div class="retro-bike__item__text-subimg__title title">
                     retrò Bike - M. Hulot
@@ -152,7 +152,7 @@
                   <div class="retro-bike__item__text-subimg__img">
                     <img
                       src="img/chrome-wheels.jpg"
-                      alt=""
+                      alt="chrome-wheels"
                       class="retro-bike__item__text-subimg__img"
                     />
                   </div>
@@ -160,7 +160,7 @@
                 <div class="retro-bike__item__img">
                   <img
                     src="img/red-bike.jpg"
-                    alt=""
+                    alt="red-bike"
                     class="retro-bike__item__img1"
                   />
                 </div>
@@ -172,7 +172,7 @@
           <div class="conteiner">
             <div class="scroll__item">
               <div class="scroll__item__icon">
-                <img src="img/icon/twitter-bird.png" alt="" />
+                <img src="img/icon/twitter-bird.png" alt="twitter-bird" />
               </div>
               <div class="scroll__item__title title">
                 <p>
@@ -198,14 +198,14 @@
                   <div class="img__item__1__row__img1">
                     <img
                       src="img/l1.jpg"
-                      alt=""
+                      alt="1"
                       class="img__item__1__row__img1"
                     />
                   </div>
                   <div class="img__item__1__row__img2">
                     <img
                       src="img/l2.jpg"
-                      alt=""
+                      alt="2"
                       class="img__item__1__row__img2"
                     />
                   </div>
@@ -213,35 +213,35 @@
                 <div class="img__item__1__under-img">
                   <img
                     src="img/l3.jpg"
-                    alt=""
+                    alt="3"
                     class="img__item__1__under-img"
                   />
                 </div>
               </div>
               <div class="img__item__2">
                 <div class="img__item__2__img1">
-                  <img src="img/l4.jpg" alt="" class="img__item__2__img11" />
+                  <img src="img/l4.jpg" alt="4 class="img__item__2__img11" />
                 </div>
                 <div class="img__item__2__img2">
-                  <img src="img/l5.jpg" alt="" class="img__item__2__img22" />
+                  <img src="img/l5.jpg" alt="5" class="img__item__2__img22" />
                 </div>
               </div>
               <div class="img__item__3">
                 <div class="img__item__3__img1">
-                  <img src="img/l6.jpg" alt="" class="img__item__3__img1" />
+                  <img src="img/l6.jpg" alt="6" class="img__item__3__img1" />
                 </div>
                 <div class="img__item__3__row">
                   <div class="img__item__3__row__img1">
                     <img
                       src="img/l7.jpg"
-                      alt=""
+                      alt="7"
                       class="img__item__3__row__img1"
                     />
                   </div>
                   <div class="img__item__3__row__img2">
                     <img
                       src="img/l8.jpg"
-                      alt=""
+                      alt="8"
                       class="img__item__3__row__img2"
                     />
                   </div>
@@ -265,7 +265,7 @@
               <div class="email__main-logo">
                 <img
                   src="img/logo/main-logo.png"
-                  alt=""
+                  alt="main-logo"
                   class="email__main-logo__logo"
                 />
               </div>
@@ -300,17 +300,17 @@
             <div class="footer__icon">
               <img
                 src="img/icon/twitter-icon.png"
-                alt=""
+                alt="twitter-icon"
                 class="footer__icon__1"
               />
               <img
                 src="img/icon/facebook-icon.png"
-                alt=""
+                alt="facebook-icon"
                 class="footer__icon__2"
               />
               <img
                 src="img/icon/pintrest-icon.png"
-                alt=""
+                alt="pintrest-icon"
                 class="footer__icon__3"
               />
             </div>
